package br.com.ajf.learnjavadesignpatterns.delegate;

public interface Service
{
	void processing();
}
